--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      mongo:
+        image: mongo:6
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd="mongosh --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+          
     defaults:
       run:
         working-directory: backend
@@ -26,6 +37,17 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.pip ]; then pip install -r requirements.pip; fi
 
+    - name: Waiting for mongo to wakeup
+      run: |
+        for i in {1..10}; do
+          if mongosh --ecal "db.runCommand({ ping: 1 })"; then
+            echo "MongoDB is up!"
+            break
+          fi
+          echo "Waiting for MongoDB..."
+          sleep 3
+        done
+      
     - name: Run the backend unit tests with pytest
       run: |
          pytest -v --cov=src --cov-report=term-missing --durations=5 test/
