--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,6 @@ jobs:
         image: mongo:6
         ports:
           - 27017:27017
-        options: >-
-          --health-cmd="mongosh --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
           
     defaults:
       run:
@@ -40,10 +35,7 @@ jobs:
     - name: Waiting for mongo to wakeup
       run: |
         for i in {1..10}; do
-          if mongosh --ecal "db.runCommand({ ping: 1 })"; then
-            echo "MongoDB is up!"
-            break
-          fi
+          nc -z localhost 27017 && echo "MongoDB is up!" && break
           echo "Waiting for MongoDB..."
           sleep 3
         done
