--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
       
     - name: Run the backend unit tests with pytest
       run: |
-        pytest -v --cov=src --cov-report=term-missing --durations=5 test/
+        pytest -v --cov=src --cov-report=term-missing --durations=5 test/ass_2 test/ass_3
